# SeedMind

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  plans.md  pyproject.toml
docs/: SeedMind_Bounded_Imagination_Batch3_Handover_2026-06-29.md  SeedMind_Bounded_Imagination_Stage_Plan_2026-06-29.md  SeedMind_Consequence_Imagination_Stage_Plan_2026-06-28.md  SeedMind_Consolidation_Scheduling_Stage_Plan_2026-06-27.md  SeedMind_Consolidation_Stage_Handover_2026-06-27.md  SeedMind_Controlled_Replay_Restoration_Stage_Handover_2026-06-28.md  SeedMind_Controlled_Replay_Restoration_Stage_Plan_2026-06-28.md  SeedMind_Human_Approved_Consolidation_Execution_Stage_Plan_2026-06-28.md  SeedMind_Learned_Consequence_Model_Batch4_Handover_2026-06-29.md  SeedMind_Learned_Consequence_Model_Stage_Plan_2026-06-28.md  SeedMind_Master_Implementation_Plan_v0.1.md  SeedMind_Proposal_Lifecycle_Stage_Plan_2026-06-27.md  SeedMind_Restart_Safe_Proposal_Memory_Stage_Handover_2026-06-28.md  SeedMind_Restart_Safe_Proposal_Memory_Stage_Plan_2026-06-27.md  SeedMind_Session_Handover_2026-06-28.md  SeedMind_Session_Handover_2026-06-29.md  SeedMind_Session_Handover_2026-06-29_Bounded_Imagination_Batch2.md  SeedMind_Session_Handover_2026-06-29_Bounded_Imagination_Batch3.md  SeedMind_Session_Handover_2026-06-29_Bounded_Imagination_Batch4.md  SeedMind_Session_Handover_2026-06-29_Learned_Consequence_Closure.md
requirements/: base.txt  dev.txt  lock-windows-cu130.txt  torch-cu130.txt
scripts/: run_ambition_formation.py  run_body_discovery.py  run_body_discovery_baseline.py  run_curiosity_comparison.py  run_curiosity_scoring.py  (+20 more)
(+442 files in other folders)
