[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedmind"
version = "0.1.0"
description = "A developmental intelligence runtime"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Arash Mehrdad" }
]
dependencies = [
    "torch==2.11.0",
    "gymnasium==1.3.0",
    "numpy>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "pygame>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
seedmind = [
    "py.typed",
    "observatory/static/*.html",
    "observatory/static/*.js",
    "observatory/static/*.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-config --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "PT",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
files = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["seedmind"]

[tool.coverage.report]
show_missing = true
skip_covered = true
